--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -66,6 +66,7 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
+allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -455,6 +456,7 @@ allow 185.241.208.24;
 allow 185.241.208.54;
 allow 185.241.208.71;
 allow 185.241.208.81;
+allow 185.241.208.92;
 allow 185.244.192.175;
 allow 185.244.192.184;
 allow 185.246.128.161;
@@ -578,6 +580,7 @@ allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.218.118.91;
+allow 193.237.221.228;
 allow 193.239.232.102;
 allow 193.26.115.140;
 allow 193.26.115.212;
@@ -627,6 +630,7 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
+allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.61.60;
@@ -984,6 +988,7 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1362::2;
+allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1005,6 +1010,7 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
+allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1540,54 +1546,6 @@ allow 2a0f:e586:f:f:b190:21e6:40ba:73e1;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
-allow 2a10:1fc0:10::19eb:717b;
-allow 2a10:1fc0:10::28fc:90d4;
-allow 2a10:1fc0:10::2a17:5b54;
-allow 2a10:1fc0:10::2cf4:6ba2;
-allow 2a10:1fc0:10::2d91:1a2d;
-allow 2a10:1fc0:10::3903:457;
-allow 2a10:1fc0:10::3919:de17;
-allow 2a10:1fc0:10::3a1:5e9f;
-allow 2a10:1fc0:10::3dc5:e694;
-allow 2a10:1fc0:10::3eb3:d1d0;
-allow 2a10:1fc0:10::3ec1:2b1e;
-allow 2a10:1fc0:10::40d8:83c;
-allow 2a10:1fc0:10::42d2:f78b;
-allow 2a10:1fc0:10::5138:4dfa;
-allow 2a10:1fc0:10::5719:261d;
-allow 2a10:1fc0:10::61d9:7617;
-allow 2a10:1fc0:10::61e2:c84d;
-allow 2a10:1fc0:10::627f:3c31;
-allow 2a10:1fc0:10::694a:c359;
-allow 2a10:1fc0:10::6b4c:30fc;
-allow 2a10:1fc0:10::6c2e:469a;
-allow 2a10:1fc0:10::6d92:d6ab;
-allow 2a10:1fc0:10::6fde:4b8d;
-allow 2a10:1fc0:10::792f:38b4;
-allow 2a10:1fc0:10::895d:abf9;
-allow 2a10:1fc0:10::8a03:d023;
-allow 2a10:1fc0:10::8b78:d42e;
-allow 2a10:1fc0:10::8d4d:eca2;
-allow 2a10:1fc0:10::9a73:d4f2;
-allow 2a10:1fc0:10::9d80:c9f7;
-allow 2a10:1fc0:10::9e08:e765;
-allow 2a10:1fc0:10::a3a5:49da;
-allow 2a10:1fc0:10::a458:8b37;
-allow 2a10:1fc0:10::a63c:724c;
-allow 2a10:1fc0:10::b571:1205;
-allow 2a10:1fc0:10::bf3f:d195;
-allow 2a10:1fc0:10::c129:61a1;
-allow 2a10:1fc0:10::c385:c7fa;
-allow 2a10:1fc0:10::c7c7:2f84;
-allow 2a10:1fc0:10::d5a6:a292;
-allow 2a10:1fc0:10::d5d0:db30;
-allow 2a10:1fc0:10::d6b7:b3e9;
-allow 2a10:1fc0:10::dbe0:6173;
-allow 2a10:1fc0:10::dbe9:7852;
-allow 2a10:1fc0:10::e4c8:9020;
-allow 2a10:1fc0:10::ea87:5496;
-allow 2a10:1fc0:10::fa6c:cac5;
-allow 2a10:1fc0:10::fdb0:ba7f;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:1467::;
@@ -1611,6 +1569,7 @@ allow 2a12:a800:2:1:185:241:208:204;
 allow 2a12:a800:2:1:185:241:208:206;
 allow 2a12:a800:2:1:185:241:208:71;
 allow 2a12:a800:2:1:185:241:208:81;
+allow 2a12:a800:2:1:185:241:208:92;
 allow 2a12:a800:2:1:45:138:16:107;
 allow 2a12:a800:2:1:45:138:16:113;
 allow 2a12:a800:2:1:45:138:16:164;
@@ -1622,6 +1581,7 @@ allow 2a12:a800:2:1:45:138:16:239;
 allow 2a12:a800:2:1:45:138:16:240;
 allow 2a12:a800:2:1:45:138:16:248;
 allow 2a12:a800:2:1:45:138:16:42;
+allow 2a12:a800:2:1:45:138:16:69;
 allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
@@ -1710,6 +1670,7 @@ allow 45.138.16.239;
 allow 45.138.16.240;
 allow 45.138.16.248;
 allow 45.138.16.42;
+allow 45.138.16.69;
 allow 45.138.16.76;
 allow 45.141.215.110;
 allow 45.141.215.111;
@@ -1804,12 +1765,10 @@ allow 46.165.243.36;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
-allow 46.249.49.183;
 allow 46.250.243.29;
 allow 46.30.188.218;
 allow 46.38.243.210;
 allow 50.7.40.39;
-allow 5.101.82.67;
 allow 5.101.84.151;
 allow 5.104.84.183;
 allow 5.104.86.6;
@@ -1917,30 +1876,6 @@ allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 85.239.41.130;
-allow 85.239.55.11;
-allow 85.239.55.110;
-allow 85.239.55.112;
-allow 85.239.55.114;
-allow 85.239.55.123;
-allow 85.239.55.132;
-allow 85.239.55.168;
-allow 85.239.55.173;
-allow 85.239.55.174;
-allow 85.239.55.184;
-allow 85.239.55.189;
-allow 85.239.55.192;
-allow 85.239.55.201;
-allow 85.239.55.228;
-allow 85.239.55.230;
-allow 85.239.55.239;
-allow 85.239.55.24;
-allow 85.239.55.249;
-allow 85.239.55.25;
-allow 85.239.55.250;
-allow 85.239.55.31;
-allow 85.239.55.37;
-allow 85.239.55.51;
-allow 85.239.55.80;
 allow 85.90.196.47;
 allow 85.93.218.204;
 allow 86.54.28.49;
@@ -1983,30 +1918,6 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
-allow 91.227.77.107;
-allow 91.227.77.108;
-allow 91.227.77.119;
-allow 91.227.77.125;
-allow 91.227.77.139;
-allow 91.227.77.158;
-allow 91.227.77.160;
-allow 91.227.77.181;
-allow 91.227.77.193;
-allow 91.227.77.200;
-allow 91.227.77.208;
-allow 91.227.77.209;
-allow 91.227.77.226;
-allow 91.227.77.229;
-allow 91.227.77.237;
-allow 91.227.77.25;
-allow 91.227.77.31;
-allow 91.227.77.36;
-allow 91.227.77.44;
-allow 91.227.77.48;
-allow 91.227.77.51;
-allow 91.227.77.54;
-allow 91.227.77.62;
-allow 91.227.77.97;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
