--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -151,6 +151,7 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
+set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -172,6 +173,7 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
+set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -706,54 +708,6 @@ set_real_ip_from 2a0f:e586:f:f:b190:21e6:40ba:73e1;
 set_real_ip_from 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
-set_real_ip_from 2a10:1fc0:10::19eb:717b;
-set_real_ip_from 2a10:1fc0:10::28fc:90d4;
-set_real_ip_from 2a10:1fc0:10::2a17:5b54;
-set_real_ip_from 2a10:1fc0:10::2cf4:6ba2;
-set_real_ip_from 2a10:1fc0:10::2d91:1a2d;
-set_real_ip_from 2a10:1fc0:10::3903:457;
-set_real_ip_from 2a10:1fc0:10::3919:de17;
-set_real_ip_from 2a10:1fc0:10::3a1:5e9f;
-set_real_ip_from 2a10:1fc0:10::3dc5:e694;
-set_real_ip_from 2a10:1fc0:10::3eb3:d1d0;
-set_real_ip_from 2a10:1fc0:10::3ec1:2b1e;
-set_real_ip_from 2a10:1fc0:10::40d8:83c;
-set_real_ip_from 2a10:1fc0:10::42d2:f78b;
-set_real_ip_from 2a10:1fc0:10::5138:4dfa;
-set_real_ip_from 2a10:1fc0:10::5719:261d;
-set_real_ip_from 2a10:1fc0:10::61d9:7617;
-set_real_ip_from 2a10:1fc0:10::61e2:c84d;
-set_real_ip_from 2a10:1fc0:10::627f:3c31;
-set_real_ip_from 2a10:1fc0:10::694a:c359;
-set_real_ip_from 2a10:1fc0:10::6b4c:30fc;
-set_real_ip_from 2a10:1fc0:10::6c2e:469a;
-set_real_ip_from 2a10:1fc0:10::6d92:d6ab;
-set_real_ip_from 2a10:1fc0:10::6fde:4b8d;
-set_real_ip_from 2a10:1fc0:10::792f:38b4;
-set_real_ip_from 2a10:1fc0:10::895d:abf9;
-set_real_ip_from 2a10:1fc0:10::8a03:d023;
-set_real_ip_from 2a10:1fc0:10::8b78:d42e;
-set_real_ip_from 2a10:1fc0:10::8d4d:eca2;
-set_real_ip_from 2a10:1fc0:10::9a73:d4f2;
-set_real_ip_from 2a10:1fc0:10::9d80:c9f7;
-set_real_ip_from 2a10:1fc0:10::9e08:e765;
-set_real_ip_from 2a10:1fc0:10::a3a5:49da;
-set_real_ip_from 2a10:1fc0:10::a458:8b37;
-set_real_ip_from 2a10:1fc0:10::a63c:724c;
-set_real_ip_from 2a10:1fc0:10::b571:1205;
-set_real_ip_from 2a10:1fc0:10::bf3f:d195;
-set_real_ip_from 2a10:1fc0:10::c129:61a1;
-set_real_ip_from 2a10:1fc0:10::c385:c7fa;
-set_real_ip_from 2a10:1fc0:10::c7c7:2f84;
-set_real_ip_from 2a10:1fc0:10::d5a6:a292;
-set_real_ip_from 2a10:1fc0:10::d5d0:db30;
-set_real_ip_from 2a10:1fc0:10::d6b7:b3e9;
-set_real_ip_from 2a10:1fc0:10::dbe0:6173;
-set_real_ip_from 2a10:1fc0:10::dbe9:7852;
-set_real_ip_from 2a10:1fc0:10::e4c8:9020;
-set_real_ip_from 2a10:1fc0:10::ea87:5496;
-set_real_ip_from 2a10:1fc0:10::fa6c:cac5;
-set_real_ip_from 2a10:1fc0:10::fdb0:ba7f;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:1467::;
@@ -777,6 +731,7 @@ set_real_ip_from 2a12:a800:2:1:185:241:208:204;
 set_real_ip_from 2a12:a800:2:1:185:241:208:206;
 set_real_ip_from 2a12:a800:2:1:185:241:208:71;
 set_real_ip_from 2a12:a800:2:1:185:241:208:81;
+set_real_ip_from 2a12:a800:2:1:185:241:208:92;
 set_real_ip_from 2a12:a800:2:1:45:138:16:107;
 set_real_ip_from 2a12:a800:2:1:45:138:16:113;
 set_real_ip_from 2a12:a800:2:1:45:138:16:164;
@@ -788,6 +743,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:239;
 set_real_ip_from 2a12:a800:2:1:45:138:16:240;
 set_real_ip_from 2a12:a800:2:1:45:138:16:248;
 set_real_ip_from 2a12:a800:2:1:45:138:16:42;
+set_real_ip_from 2a12:a800:2:1:45:138:16:69;
 set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
 set_real_ip_from 2a12:a800:2:1:45:141:215:111;
